<resources>
    <string name="app_name">Super AI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="description">Cevabını bulmak istediğiniz</string>
    <string name="description_continue">Soruyu aşağıya yazın</string>
    <string name="type_here">Buraya yazın..</string>
    <string name="not_premium">Değil</string>
    <string name="house_rent">Antalya Kaş ev kiraları ne kadar?</string>
    <string name="take_ticket">Orlando Disney World için biletleri kapıda satın alabilir miyim?</string>
    <string name="suggest_restaurant">Kapadokya\'da ziyaret edilecek en ünlü 5 restoran hangileri?</string>
    <string name="travel">İstanbul\'da sadece 5 gün kalacağımı varsayarsak, mutlaka görülmesi gereken yerleri önerir misiniz?</string>
    <string name="name_crator">Aşağıdaki ayrıntılar için ürün adı önerisi oluştur: Ürün açıklaması: Ev yapımı milkshake yapma makinesi. Önemli kelimeler: hızlı, sağlıklı, kompakt.</string>
    <string name="suggest_relationship">Kız arkadaşıma evlilik teklifi için romantik fikirler nelerdir?</string>
    <string name="suggest_title">Çeşme\'deki bir seyahat fotoğrafı için Instagram başlık fikirlerin var mı?</string>
    <string name="write_document">Aşk hakkında bir şiir yaz</string>
    <string name="job_posts">Jr. QA Engineer pozisyonu için bir iş ilanı şablonu yazabilir misin?</string>
    <string name="cell">Bir ökaryotik hücrenin organelleri nelerdir?</string>
    <string name="climate">İklim değişikliği dünyayı nasıl etkiler?</string>
    <string name="evolution">Evrim süreci nedir ve nasıl işler?</string>
    <string name="brain">Beyin nasıl bilgi işler, düşünce ve duyguları nasıl oluşturur?</string>
    <string name="ıniverse">Evrenin yapısı nedir ve nasıl oluştu?</string>
    <string name="hair">Saç uzamasını hızlandırmak için bazı yollar nelerdir?</string>
    <string name="sleep">Daha iyi uyumamı sağlayacak bazı ipuçları nelerdir?</string>
    <string name="routine">Sabah rutini oluşturmak için bazı ipuçları nelerdir?</string>
    <string name="book">Mindfulness ile ilgilenen biri için önerebileceğin kitaplar nelerdir?</string>
    <string name="house_rent_short">Ev Kiralama</string>
    <string name="take_ticket_short">Bilet Alma</string>
    <string name="suggest_restaurant_short">Restoran Tavsiyesi</string>
    <string name="travel_short">Gezilecek Yerler</string>
    <string name="name_crator_short">İsim Üretici</string>
    <string name="suggest_relationship_short">İlişki Tavsiyeleri</string>
    <string name="suggest_title_short">Başlık Fikirleri</string>
    <string name="write_document_short">Şiir Yazma</string>
    <string name="job_posts_short">İş İlanı</string>
    <string name="cell_short">Hücre Organelleri</string>
    <string name="climate_short">İklim Değişikliği</string>
    <string name="evolution_short">Evrim Teorisi</string>
    <string name="hair_short">Saç Uzatmak</string>
    <string name="sleep_short">Daha iyi uyku</string>
    <string name="routine_short">Sabah Rutini</string>
    <string name="book_short">Kitap Önerileri</string>
    <string name="travel_and_discovery">Seyehat Ve Keşif</string>
    <string name="creative_ideas">Yaratıcı Fikirler</string>
    <string name="science_and_learning">Bilim ve Öğrenme</string>
    <string name="beauty_and_lifestyle">Güzellik ve Yaşam Tarzı</string>
    <string name="select_language">Dili Seçin</string>
    <string name="share_speak_with_ai">Speak With AI\'yi paylaş</string>
    <string name="evaluate">Bizi Değerlendirin</string>
    <string name="security">Gizlilik Politikası</string>
    <string name="help">Yardım</string>
    <string name="share_app">Bu harika uygulamayı kontrol et:</string>
    <string name="share_app_two">Uygulamayı paylaşın</string>
    <string name="write_your_message_here">Mesajınızı buraya yazın</string>
    <string name="send_with_email">E-posta ile gönder</string>
    <string name="logut">Çıkış yapıldı</string>
    <string name="privacy_policy">Bu Gizlilik Politikası, Speak With AI tarafından sunulan mobil uygulamanın kullanımınız sırasında toplanan bilgileri ve bu bilgilerin nasıl kullanıldığını açıklar.

1. Topladığımız Bilgiler
Uygulamamızı kullanırken, sizden bazı kişisel verileri toplamamız gerekebilir. Bu veriler, kayıt işlemi sırasında sağladığınız bilgileri ve Uygulamayı kullanırken oluşturulan diğer bilgileri içerir.
 <br />
2. Bilgilerin Kullanımı
Topladığımız bilgileri aşağıdaki amaçlarla kullanırız
 <br />

Uygulamayı yönetmek ve iyileştirmek.
Kullanıcı deneyimini kişiselleştirmek ve geliştirmek.
Teknik destek veya müşteri hizmetleri sağlamak.
Uygulamanın güvenliğini sağlamak.
<br />

3. Bilgi Paylaşımı
Verilerinizin gizliliği bizim için önemlidir ve kişisel bilgilerinizi üçüncü taraf servis sağlayıcılarıyla sadece aşağıdaki durumlarda paylaşırız

OpenAI ChatGPT API hizmetini sağlayan OpenAI ile mesajlarınız paylaşılır. OpenAI nin kendi gizlilik politikasını gözden geçirebilirsiniz.
Yasal gereklilikler Yasalar gereği talep edilmesi durumunda veya hukuk yoluyla koruma ihtiyacı olduğuna inandığımız durumlarda bilgilerinizi paylaşabiliriz.
 <br />
4. Güvenlik
Bilgilerinizi güvende tutmak için ticari olarak kabul görmüş teknik ve organizasyonel önlemler kullanırız. Ancak, internet üzerinde hiçbir iletim yönteminin veya elektronik depolamanın yüzde yüz güvenli olmadığını unutmayın.
 <br />
5. Gizlilik Politikasında Değişiklikler
Bu gizlilik politikasını zaman zaman güncellememiz gerekebilir. Bu sayfayı düzenli olarak ziyaret ederek güncellemeleri kontrol edebilirsiniz.
 <br />
6. İletişim
Bu Gizlilik Politikası hakkında daha fazla bilgi almak için lütfen bize yazın. speakwithaitr@gmail.com</string>
    <string name="privacy_policy_Title">Gizlilik Politikası</string>
    <string name="no_choices_found">Seçenek bulunamadı</string>
    <string name="response_body_is_null">Gelen cevap boş</string>
    <string name="limited_until_2021">2021 yılına kadar sınırlıyım</string>
    <string name="limited_until_2021_one">2021 yılına kadar sınırlı</string>
    <string name="limited_until_2021_two">2021\'e kadar bilgim</string>
    <string name="limited_until_2021_three">2021\'e kadar eğitildim</string>
    <string name="data_after_2021_here">2021 sonrası verilere buradan bakabilirsiniz:</string>
    <string name="typing">Yazıyor</string>
    <string name="speak_with_chat">Chat ile Konuş</string>
    <string name="unsupport">Üzgünüm, cihazınız bu özelliği desteklemiyor</string>
    <string name="no_microphone_permission">Mikrofon izni reddedildi.</string>
    <string name="chat">Sohbet</string>
    <string name="explore">Keşfet</string>
    <string name="more">Daha Fazlası</string>
    <string name="history">Geçmiş</string>
    <string name="head_text_one">Premium Erişim</string>
    <string name="head_text_two">ile Deneyiminizi</string>
    <string name="head_text_three">Artırın</string>
    <string name="premium_user">Artık bir Premium Kullanıcısısınız!</string>
    <string name="update_version">Lütfen uygulama sürümünüzü güncelleyin</string>
    <string name="create_an_account">Bir Hesap Oluştur</string>
    <string name="unsuccess">Giriş Başarısız</string>
    <string name="one_day_passed">1 Gün Geçti!</string>
    <string name="ask_now">Artık sorularını sorabilirsin</string>
    <string name="main_text_one">10+ Yapay Zeka</string>
    <string name="main_text_two">Modülü Süper AI Appde</string>
    <string name="button_text">HADİ BAŞLAYALIM</string>
    <string name="pick_ai_service">AI SERVİSİNİ SEÇ</string>
    <string name="general">FİNANS</string>
    <string name="chat_with_ai">YAPAY ZEKA İLE SOHBET</string>
    <string name="creative">YARATICI YAPAY ZEKA ARAÇLARI</string>
    <string name="stock">STOK</string>
    <string name="please_login">Lütfen Giriş Yapın</string>
    <string name="subject">Konu</string>
    <string name="your_message">Mesajınız...</string>
    <string name="select_email_app">Bir e-posta uygulaması seçin</string>
    <string name="no_email_app">E-posta uygulaması bulunamadı</string>
    <string name="home_page">Ana Sayfa</string>
    <string name="converter">Dönüştürücü</string>
    <string name="search_for_a_coin">Bir kripto para birimi arayın</string>
    <string name="too_many_requests">Çok fazla istek!</string>
    <string name="an_error_occurred">Bir hata oluştu</string>
    <string name="no_internet_connection">İnternet bağlantısı yok!</string>
    <string name="currency_converter">Kripto Dönüştürücü</string>
    <string name="favourite_coins">Favori Kripto Paralar</string>
    <string name="title_converter">Dönüştürücü</string>
    <string name="available_coins">Kullanılabilir kripto paralar</string>
    <string name="slash">/</string>
    <string name="watchlist">İzleme Listesi</string>
    <string name="crypto_currency">Kripto Anlık</string>
    <string name="zero">0</string>
    <string name="coingecko_attribution"> </string>
    <string name="title_activity_google">GoogleActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Sonraki</string>
    <string name="previous">Önceki</string>
    <string name="editor_picks">AI Seçimleri</string>
    <string name="unexpected_error">Beklenmeyen Hata</string>
    <string name="colors_tones">Renk Tonları</string>
    <string name="categories">Kategoriler</string>
    <string name="download_started">İndirme başladı. İlerleme için bildirim çubuğunuzu kontrol edin.</string>
    <string name="download_failed">İndirme başarısız. Lütfen tekrar deneyin.</string>
    <string name="super_ai_app_jpg">SuperAIApp.jpg</string>
    <string name="download">İndir</string>
    <string name="download_music">Müzik İndiriliyor</string>
    <string name="search_music">Müzik Ara</string>
    <string name="convert">Dönüştür</string>
    <string name="your_last_record">Son Kaydınız</string>
    <string name="write_your_text">Metinizi buraya yazın 🖌️</string>
    <string name="last_record">Son Kayıt:</string>
    <string name="woman">Kadın</string>
    <string name="man">Erkek</string>
    <string name="empy_message">Metin boş! Ses dosyası oluşturulamıyor.</string>
    <string name="turkish">Türkçe</string>
    <string name="english">İngilizce</string>
    <string name="russian">Rusça</string>
    <string name="french">Fransızca</string>
    <string name="german">Almanca</string>
    <string name="italian">İtalyanca</string>
    <string name="file_downloaded">Dosya indirildi: </string>
    <string name="file_not_downloaded">Dosya indirilemedi!</string>
    <string name="not_find_voice_file">Ses dosyası bulunamadı!</string>
    <string name="generate">Oluştur</string>
    <string name="size_1024">1024 x 1024</string>
    <string name="size_512">512 x 512</string>
    <string name="size_256">256 x 256</string>
    <string name="prompt_hint">Buraya isteğinizi girin 🎨🖌️</string>
    <string name="enter_description">Detaylı açıklamayı düzenleyin</string>
    <string name="name">İsim</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="e_mail">E-Posta</string>
    <string name="password">Şifre</string>
    <string name="required">*Gerekli</string>
    <string name="no_ads">REKLAMSIZ</string>
    <string name="access_every_module">HER MODÜLE ERİŞİM</string>
    <string name="early_access">ERKEN ERİŞİM</string>
    <string name="get_ai_news">AI HABERLERİNİ AL</string>
    <string name="limitless_download">LİMİTSİZ İNDİRME</string>
    <string name="more_ai_voice">DAHA FAZLA AI SES</string>
    <string name="open_notification_information">Güncel kalmak için bildirimleri açın</string>
    <string name="okay">Tamam</string>
    <string name="reminder">HATIRLATMA</string>
    <string name="your_url_here">URL niz buraya</string>
    <string name="create">Oluştur</string>
</resources>