<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:background="@drawable/premium_item_background"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/baseline_do_not_disturb_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_ads"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:background="@drawable/premium_item_background"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/baseline_check_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/access_every_module"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:background="@drawable/premium_item_background"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/early_access"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/early_access"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linear1"
        >
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:background="@drawable/premium_item_background"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/megaphone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_ai_news"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:background="@drawable/premium_item_background"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/limitlessdownload"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limitless_download"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:background="@drawable/premium_item_background"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/baseline_settings_voice_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_ai_voice"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>