<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="20dp"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColorHint="@color/white"
            app:counterTextColor="@color/white"
            android:textColor="@color/white"
            app:startIconTint="@color/white"
            app:boxStrokeColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.ak.ui.CountryCodePicker
            android:id="@+id/ccp_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:arrowSize="@dimen/_20sdp"
            app:contentColor="@color/white"
            app:defaultNameCode="us"
            app:excludedCountries="ad,ae"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:showArrowDown="true"
            app:showFlag="true"
            app:showNameCode="false"
            app:textSize="@dimen/_12ssp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:padding="20dp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:counterMaxLength="20"
            app:counterTextColor="@color/white"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/white"
            android:textColor="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ccp_phone"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="phone"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:textColorHint="@color/white"
            app:counterTextColor="@color/white"
            android:textColor="@color/white"
            app:startIconTint="@color/white"
            app:boxStrokeColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/white"
            android:padding="20dp"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="20dp"
            app:counterMaxLength="20"
            android:textColorHint="@color/white"
            app:counterTextColor="@color/white"
            app:startIconTint="@color/white"
            app:boxStrokeColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/white"
            app:endIconMode="clear_text"
            android:textColor="@color/white"
            app:helperText="@string/required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>